--- a/Product_Landing/index.html
+++ b/Product_Landing/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="author" content="Elshindr">
+    <meta name="description" content="FCC_LandingProductPage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LandingProduct</title>
+    <title>LandingProduct Page</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="" />
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
