--- a/Survey/index.html
+++ b/Survey/index.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Page</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/svg/static/icons/svg/1161/1161388.svg" />
 </head>
 
 <body>
-
     <header>
         <div id="flex">
             <h1 id="title">Software Satisfaction Services</h1>
@@ -38,11 +37,11 @@
                 <br>
                 <select id="dropdown" tabindex="4" name="installation-difficulty" required>
                     <option disabled selected value>Select options</option>
-                    <option accesskey="ea" value="Easy">Easy</option>
-                    <option accesskey="en" value="easyEnough">Easy Enough</option>
-                    <option accesskey="me" value="medium">Medium</option>
-                    <option accesskey="qu" value="quitedifficult">Quite Difficult</option>
-                    <option accesskey="di" value="difficult">Difficult</option>
+                    <option value="Easy">Easy</option>
+                    <option value="easyEnough">Easy Enough</option>
+                    <option value="medium">Medium</option>
+                    <option value="quitedifficult">Quite Difficult</option>
+                    <option value="difficult">Difficult</option>
                 </select>
             </div>
             <br>
@@ -50,17 +49,16 @@
 
             <p class="titre1">Does it crash often?</p>
             <div id="form-radio">
-                <label for="never" name="crashTest">Never
+                <label for="never">Never
                     <input id="never" type="radio" name="crashTest" value="Never">
                 </label>
-                <label for="sometime" name="crashTest">Sometime
+                <label for="sometime">Sometime
                     <input id="sometime" type="radio" name="crashTest" value="Sometime">
                 </label>
-                <label for="often" name="crashTest">Often
+                <label for="often">Often
                     <input id="often" type="radio" name="crashTest" value="Often">
                 </label>
-                <label for="too-often" name="crashTest">Too Often
-
+                <label for="too-often">Too Often
                     <input id="too-often" type="radio" name="crashTest" value="too-often">
                 </label>
             </div>
@@ -82,22 +80,21 @@
                 <label for="check-where">The button is it glowing?
                     <input id="check-where" type="checkbox" tabindex="12" name="checkb" value="where"></label>
                 <br>
-                <label for="check-where">In red?
-                    <input id="check-where" type="checkbox" tabindex="13" name="checkb" value="where"></label>
+                <label for="check-red">In red?
+                    <input id="check-red" type="checkbox" tabindex="13" name="checkb" value="red"></label>
                 <br>
                 <label for="check-green">In green?
-                    <input id="check-where" type="checkbox" tabindex="13" name="checkb" value="where"></label>
+                    <input id="check-green" type="checkbox" tabindex="13" name="checkb" value="where"></label>
                 <br>
                 <label for="check-purple">Or in purple maybe?
-                    <input id="check-purple" type="checkbox" tabindex="13" name="checkb" value="where"></label>
+                    <input id="check-purple" type="checkbox" tabindex="13" name="checkb" value="green"></label>
             </div>
             <br>
             <hr>
             <div id="comment-area">
                 <label class="titre" for="comment-label">How can we improve the software:</label>
                 <br>
-                <textarea id="comment-label" tabindex="14" name="comments" wrap="soft" maxlength=200
-                    placeholder="Or any suggestions?" cols="30" rows="5">
+                <textarea id="comment-label" tabindex="14" name="comments" wrap="soft" maxlength=200 placeholder="Or any suggestions?" cols="30" rows="5">
                 </textarea>
             </div>
             <br>
@@ -108,8 +105,11 @@
 
 
     </main>
-    <script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
+
+<footer>
+    <div>Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+</footer>
 </body>
-
 </html>
