--- a/Tribute/index.html
+++ b/Tribute/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Page</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="icon" type="image/x-icon" href="https://cdn.icon-icons.com/icons2/1358/PNG/512/if-advantage-eco-friendly-1034358_88853.png" />
 </head>
 
 
@@ -16,10 +16,10 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <main id="main">
         <h1 id="title">Dr. Norman Borlaug</h1>
+        <hr>
         <p>A super-man who saved a billion lives</p>
         <figure id="img-div">
-            <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-                alt="Dr.Norman Borlaug in a Mexican wheat field with biologists.">
+            <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="Dr.Norman Borlaug in a Mexican wheat field with biologists.">
             <figcaption id="img-caption">Mexico, Dr. Norman Borlaug trains others biologists to increase wheat
                 yields to pursue his war on hunger.</figcaption>
         </figure>
@@ -27,46 +27,44 @@
             <h2>The time line of Dr. Borlaug's life:</h2>
             <br>
             <ul>
-                <li><strong>1914</strong>- Born in Cresco, Iowa</li><br>
+                <li><strong>1914</strong>- Born in Cresco, Iowa</li>
                 <li><strong>1933</strong>- Leaves his family's farm to attend the University of Minnesota, thanks to
-                    a Depression era program known as the "National Youth Administration"</li><br>
+                    a Depression era program known as the "National Youth Administration"</li>
                 <li><strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian
                     Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of
-                    this left scars on me."</li><br>
-                <li><strong>1937</strong> - Finishes university and takes a job in the US Forestry Service</li><br>
+                    this left scars on me."</li>
+                <li><strong>1937</strong> - Finishes university and takes a job in the US Forestry Service</li>
                 <li><strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget
                     cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches
-                    him about breeding pest-resistent plants.</li><br>
+                    him about breeding pest-resistent plants.</li>
                 <li><strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is
                     rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control
-                    malaria, disinfectants, and other applied science.</li><br>
-                <li><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology</li><br>
+                    malaria, disinfectants, and other applied science.</li>
+                <li><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology</li>
                 <li><strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant
                     wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his
                     team breeds 6,000 different strains of disease resistent wheat - including different varieties
-                    for each major climate on Earth.</li><br>
+                    for each major climate on Earth.</li>
                 <li><strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields
-                </li><br>
+                </li>
                 <li><strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling
                     American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of
-                    Mexico's wheat.</li><br>
+                    Mexico's wheat.</li>
                 <li><strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian
                     subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
-                <br>
-                <li><strong>1970</strong> - receives the Nobel Peace Prize</li><br>
+                <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
                 <li><strong>1983</strong> - helps seven African countries dramatically increase their maize and
-                    sorghum yields</li><br>
-                <li><strong>1984</strong> - becomes a distinguished professor at Texas A&M University</li><br>
+                    sorghum yields</li>
+                <li><strong>1984</strong> - becomes a distinguished professor at Texas A&M University</li>
                 <li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues
                     that genetically modified crops are the only way we can meet the demand, as we run out of arable
                     land. Says that GM crops are not inherently dangerous because "we've been genetically modifying
                     plants and animals for a long time. Long before we called it science, people were selecting the
-                    best breeds."</li><br>
+                    best breeds."</li>
                 <li><strong>2009</strong> - dies at the age of 95.</li>
             </ul>
             <br>
-            <blockquote
-                cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+            <blockquote cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
                 <p>
                     <em>"Borlaug's life and achievement are testimony to the far-reaching contribution that one
                         man's towering intellect, persistence and scientific vision can make to human peace and
@@ -80,12 +78,11 @@
                 <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank"> a
                     Wikipedia link</a> to discover more about this amazing man.
             </h3>
-
         </section>
-
-
     </main>
-
+    <footer>
+        <div>Icon made by <a href="https://twitter.com/Sashka_letniy" title="Sashka_letniy">Sashka_letniy</a> from <a href="https://www.iconfinder.com/" title="iconfinder">iconfinder.com</a></div>
+    </footer>
 </body>
 
 </html>
